css/main.css
* {
  font-family: "Satoshi Variable", "Iosevka";
  font-weight: 500;
  font-size: 16px;
  border: none;
  /* border-radius: 0px; */
}

window {
  background: transparent;
}

button {
  border-radius: 7px;
}

button:focus {
  color: @accent_bg_color;
}

button:hover {
  color: @accent_bg_color;
}

.base {
  border-radius: 12px;
  padding: 10px;
  margin: 20px;
  background: @theme_bg_color;
}

/* Bar */
window.Bar > centerbox {
  /* border-radius: 10px; */
  /* margin: 8px; */
}

window.Bar button {
  border-radius: 12px;
  margin: 2px;
}

/* App Launcher */
.AppLauncher {
  min-width: 450px;
}

.AppLauncher > scrollable {
  min-height: 510px;
}

.AppLauncher-Input {
  padding: 0 20px;
  margin: 5px 0 10px;
  min-height: 40px;
}

.AppLauncher-ItemName > button {
  font-size: 2rem;
  padding: 10px 0;
  min-height: 50px;
}

.AppIcon {
  margin: 0 20px;
  font-size: 42px;
}

.AppText {
  padding-right: 20px;
}

.AppName {
  font-size: 1.25em;
  font-weight: 700;
}

.AppDescription {
  font-size: 0.8em;
}

/* Media */
.Media {
  /* min-height: 300px; */
  min-width: 750px;
  padding: 5px;
}

.Cover {
  min-height: 300px;
  min-width: 300px;
  background-position: center;
  background-size: cover;
  border-radius: 7px 0 0 7px;
}

.Player {
  margin: 0 40px;
}

.Title {
  font-size: 2em;
  font-weight: 900;
}

.Artist {
  font-size: 1.5em;
  font-weight: 400;
}

.Album {
  margin-top: 20px;
}

/* OSD */
.Osd {
  min-width: 50px;
}

.Osd > icon {
  padding: 20px 0 10px;
}

.Osd-Slider {
  min-height: 300px;
  border-radius: 7px;
  padding: 0;
}

trough > slider {
  background: transparent;
  box-shadow: none;
}

trough > highlight {
  min-width: 50px;
}

/* Clipboard */
.Clipboard-Item {
  padding: 20px;
}

.Clipboard-Item > label {
  font-size: 0.9em;
}

/* Power Menu */
.PowerMenu-Icon {
  padding: 20px;
  margin: 20px;
  font-size: 3em;
}

